--- a/.github/workflows/publish-preview.yml
+++ b/.github/workflows/publish-preview.yml
@@ -15,6 +15,8 @@ jobs:
       - name: Sphinx link test
         run: |
           sphinx-build site -W -b linkcheck -d _build/doctrees _build/html
+          pwd
+          ls -R
       - name: Sync preview
         uses: SamKirkland/FTP-Deploy-Action@v4.3.4
         with:
