--- a/.github/workflows/publish-preview.yml
+++ b/.github/workflows/publish-preview.yml
@@ -12,9 +12,6 @@ jobs:
       - name: Sphinx build
         run: |
           sphinx-build site _build
-      - name: Sphinx link test
-        run: |
-          sphinx-build site -W -b linkcheck -d _build/doctrees _build/html
           pwd
           ls -R
       - name: Sync preview
@@ -24,7 +21,7 @@ jobs:
           username: dugal@leftfield.online
           password: ${{ secrets.AFRIHOST_FTP_LOGIN }}
           protocol: ftps
-          local-dir: ./_build/html/
+          local-dir: ./_build/
           server-dir: ./preview/
           dry-run: True
           
