--- a/.github/workflows/publish-preview.yml
+++ b/.github/workflows/publish-preview.yml
@@ -11,7 +11,7 @@ jobs:
           pip install -r requirements.txt
       - name: Sphinx build
         run: |
-          sphinx-build -W -M html site site/_build
+          sphinx-build -W -b html -d site/_build/doctrees site site/_build/html
           ls site/_build/html -R
       - name: Sync preview
         uses: SamKirkland/FTP-Deploy-Action@v4.3.4
